# cc-mapf

./: .gitattributes  .gitignore  README.md  copy_gifs_to_assets.sh  generate_all_gifs.sh  pyproject.toml  render_advanced_visualizations.py  render_enhanced_showcase.py  render_showcase.py  render_variety_gifs.py  run_all_gifs_detached.sh  run_benchmark.sh  run_enhanced_full_detached.sh  run_full_benchmark.sh  run_fun_gifs_detached.sh  run_visualizations.sh  run_visualizations_only_detached.sh
configs/instances/: example.yaml
configs/render/: palettes.yaml  paper_4_6_8_10.yaml  paper_gallery.yaml  showcase.yaml  themes.yaml
configs/suites/: benchmark_academic.yaml  benchmark_academic_enhanced.yaml  benchmark_cc_variants.yaml  benchmark_connected.yaml  benchmark_connected_step.yaml  benchmark_cyberpunk.yaml  benchmark_enhanced.yaml  benchmark_hard_cases.yaml  benchmark_light_vibrant.yaml  benchmark_ocean.yaml  benchmark_premium.yaml  benchmark_prioritized_cc.yaml  benchmark_quick.yaml  benchmark_ultra.yaml  benchmark_vibrant.yaml  benchmark_windowed_cc_warehouse_32_focus.yaml  core.yaml  core_no_render_connected.yaml  overnight_academic.yaml  overnight_academic_enhanced.yaml  overnight_connected.yaml  overnight_cyberpunk.yaml  overnight_enhanced.yaml  overnight_hard_cases.yaml  (+10 more)
tests/: test_cli_integration.py  test_connected_step_large_scale.py  test_connected_step_performance.py  test_environment_validation.py  test_generator.py  test_paper_rollout.py  test_planner_variants.py  test_planners.py  test_render_gallery.py  test_render_selection.py  test_render_style.py
(+38 files in other folders)
